fix: buttons style on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -109,6 +109,10 @@
     @apply button-white-outline hover:button-reflex hover:button-white-reflex;
   }
 
+  .button-white {
+    @apply hover:button-reflex hover:button-white-reflex border-white bg-white text-gray-900 hover:border-gray-100 hover:bg-gray-100 hover:text-gray-900;
+  }
+
   .button:disabled {
     @apply !border-gray-400 !bg-gray-400 !text-gray-800;
 
